--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build -f ./Dockerfile . --tag ghcr.io/gh-container-demo/image:$(date +%s) && docker push ghcr.io/gh-container-demo/image:$(date +%s)  
+      run:  ./buildPush.sh
