--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run:  chmod +x ./buildPush.sh && ./buildPush.sh
+      - name: Login to container registry
+        env: 
+         PUSH_TOKEN: ${{ secrets.PUSH_TOKEN }}
+        run: docker login ghcr.io -u aloisreitbauer --password $PUSH_TOKEN          
+      - uses: actions/checkout@v2
+      - name: Build the Docker image
+        run:  chmod +x ./buildPush.sh && ./buildPush.sh
